--- a/0x00-ES6_basic/package.json
+++ b/0x00-ES6_basic/package.json
@@ -1,20 +1,181 @@
 {
-	"scripts": {
-		"lint": "./node_modules/.bin/eslint",
-		"check-lint": "lint [0-9]*.js",
-		"dev": "npx babel-node",
-		"test": "jest",
-		"full-test": "./node_modules/.bin/eslint [0-9]*.js && jest"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.17.9",
-		"@babel/node": "^7.8.0",
-		"@babel/preset-env": "^7.16.11",
-		"babel-jest": "^27.5.1",
-		"eslint": "^6.8.0",
-		"eslint-config-airbnb-base": "^14.0.0",
-		"eslint-plugin-import": "^2.18.2",
-		"eslint-plugin-jest": "^22.17.0",
-		"jest": "^24.9.0"
-	}
+  "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "babel-jest": "^29.7.0",
+    "eslint": "^8.57.0"
+  },
+  "name": "0x00-es6_basic",
+  "description": "should not be empty",
+  "version": "1.0.0",
+  "main": ".eslintrc.js",
+  "dependencies": {
+    "acorn": "^8.11.3",
+    "acorn-jsx": "^5.3.2",
+    "ajv": "^6.12.6",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "anymatch": "^3.1.3",
+    "argparse": "^2.0.1",
+    "babel-plugin-istanbul": "^6.1.1",
+    "babel-plugin-jest-hoist": "^29.6.3",
+    "babel-plugin-polyfill-corejs2": "^0.4.8",
+    "babel-plugin-polyfill-corejs3": "^0.9.0",
+    "babel-plugin-polyfill-regenerator": "^0.5.5",
+    "babel-preset-current-node-syntax": "^1.0.1",
+    "babel-preset-jest": "^29.6.3",
+    "balanced-match": "^1.0.2",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "browserslist": "^4.23.0",
+    "bser": "^2.1.1",
+    "callsites": "^3.1.0",
+    "camelcase": "^5.3.1",
+    "caniuse-lite": "^1.0.30001596",
+    "chalk": "^4.1.2",
+    "ci-info": "^3.9.0",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "concat-map": "^0.0.1",
+    "convert-source-map": "^2.0.0",
+    "core-js-compat": "^3.36.0",
+    "cross-spawn": "^7.0.3",
+    "debug": "^4.3.4",
+    "deep-is": "^0.1.4",
+    "doctrine": "^3.0.0",
+    "electron-to-chromium": "^1.4.695",
+    "escalade": "^3.1.2",
+    "escape-string-regexp": "^4.0.0",
+    "eslint-scope": "^7.2.2",
+    "eslint-visitor-keys": "^3.4.3",
+    "espree": "^9.6.1",
+    "esprima": "^4.0.1",
+    "esquery": "^1.5.0",
+    "esrecurse": "^4.3.0",
+    "estraverse": "^5.3.0",
+    "esutils": "^2.0.3",
+    "fast-deep-equal": "^3.1.3",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-levenshtein": "^2.0.6",
+    "fastq": "^1.17.1",
+    "fb-watchman": "^2.0.2",
+    "file-entry-cache": "^6.0.1",
+    "fill-range": "^7.0.1",
+    "find-up": "^5.0.0",
+    "flat-cache": "^3.2.0",
+    "flatted": "^3.3.1",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.2",
+    "gensync": "^1.0.0-beta.2",
+    "get-package-type": "^0.1.0",
+    "glob": "^7.2.3",
+    "glob-parent": "^6.0.2",
+    "globals": "^13.24.0",
+    "graceful-fs": "^4.2.11",
+    "graphemer": "^1.4.0",
+    "has-flag": "^4.0.0",
+    "hasown": "^2.0.1",
+    "ignore": "^5.3.1",
+    "import-fresh": "^3.3.0",
+    "imurmurhash": "^0.1.4",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "is-core-module": "^2.13.1",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "is-path-inside": "^3.0.3",
+    "isexe": "^2.0.0",
+    "istanbul-lib-coverage": "^3.2.2",
+    "istanbul-lib-instrument": "^5.2.1",
+    "jest-haste-map": "^29.7.0",
+    "jest-regex-util": "^29.6.3",
+    "jest-util": "^29.7.0",
+    "jest-worker": "^29.7.0",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^4.1.0",
+    "jsesc": "^2.5.2",
+    "json-buffer": "^3.0.1",
+    "json-schema-traverse": "^0.4.1",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "json5": "^2.2.3",
+    "keyv": "^4.5.4",
+    "levn": "^0.4.1",
+    "locate-path": "^6.0.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.merge": "^4.6.2",
+    "lru-cache": "^5.1.1",
+    "makeerror": "^1.0.12",
+    "merge-stream": "^2.0.0",
+    "micromatch": "^4.0.5",
+    "minimatch": "^3.1.2",
+    "ms": "^2.1.2",
+    "natural-compare": "^1.4.0",
+    "node-int64": "^0.4.0",
+    "node-releases": "^2.0.14",
+    "normalize-path": "^3.0.0",
+    "once": "^1.4.0",
+    "optionator": "^0.9.3",
+    "p-limit": "^3.1.0",
+    "p-locate": "^5.0.0",
+    "p-try": "^2.2.0",
+    "parent-module": "^1.0.1",
+    "path-exists": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
+    "picocolors": "^1.0.0",
+    "picomatch": "^2.3.1",
+    "pirates": "^4.0.6",
+    "prelude-ls": "^1.2.1",
+    "punycode": "^2.3.1",
+    "queue-microtask": "^1.2.3",
+    "regenerate": "^1.4.2",
+    "regenerate-unicode-properties": "^10.1.1",
+    "regenerator-runtime": "^0.14.1",
+    "regenerator-transform": "^0.15.2",
+    "regexpu-core": "^5.3.2",
+    "regjsparser": "^0.9.1",
+    "resolve": "^1.22.8",
+    "resolve-from": "^4.0.0",
+    "reusify": "^1.0.4",
+    "rimraf": "^3.0.2",
+    "run-parallel": "^1.2.0",
+    "semver": "^6.3.1",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "signal-exit": "^3.0.7",
+    "slash": "^3.0.0",
+    "sprintf-js": "^1.0.3",
+    "strip-ansi": "^6.0.1",
+    "strip-json-comments": "^3.1.1",
+    "supports-color": "^7.2.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "test-exclude": "^6.0.0",
+    "text-table": "^0.2.0",
+    "tmpl": "^1.0.5",
+    "to-fast-properties": "^2.0.0",
+    "to-regex-range": "^5.0.1",
+    "type-check": "^0.4.0",
+    "type-fest": "^0.20.2",
+    "undici-types": "^5.26.5",
+    "unicode-canonical-property-names-ecmascript": "^2.0.0",
+    "unicode-match-property-ecmascript": "^2.0.0",
+    "unicode-match-property-value-ecmascript": "^2.1.0",
+    "unicode-property-aliases-ecmascript": "^2.1.0",
+    "update-browserslist-db": "^1.0.13",
+    "uri-js": "^4.4.1",
+    "walker": "^1.0.8",
+    "which": "^2.0.2",
+    "wrappy": "^1.0.2",
+    "write-file-atomic": "^4.0.2",
+    "yallist": "^3.1.1",
+    "yocto-queue": "^0.1.0"
+  },
+  "scripts": {
+    "test": "jest"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
